--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@cypress/code-coverage": "^3.12.44",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@testing-library/cypress": "^10.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^8.2.2",
@@ -40,7 +41,10 @@
     "react-router-dom": "^6.25.1",
     "typescript": "^5.5.3",
     "vite-plugin-istanbul": "^6.0.2",
-    "vitest": "^2.0.3",
+    "vitest": "^3.0.8",
     "wait-on": "^7.2.0"
+  },
+  "dependencies": {
+    "jsonwebtoken": "^9.0.2"
   }
 }
