--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGODB_URI='mongodb://127.0.0.1:27017/stocksDB'
+MONGODB_URI='mongodb+srv://aramissteininger:babysatchi03@finalproject.6vbuu.mongodb.net/?retryWrites=true&w=majority&appName=FinalProject'
 JWT_SECRET='secret'
