--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.12.7",
     "dotenv": "^16.4.5",
     "typescript": "^5.5.3"
