--- a/client/package.json
+++ b/client/package.json
@@ -20,11 +20,13 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^9.1.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
-    "vite-plugin-istanbul": "^6.0.2"
+    "vite-plugin-istanbul": "^6.0.2",
+    "wait-on": "^8.0.3"
   }
 }
