--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,9 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.12.7",
+    "concurrently": "^9.1.2",
     "dotenv": "^16.4.5",
-    "typescript": "^5.5.3"
+    "typescript": "^5.5.3",
+    "wait-on": "^8.0.3"
   }
 }
