--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.2"
+    "chart.js": "^4.4.8",
+    "jsonwebtoken": "^9.0.2",
+    "react-chartjs-2": "^5.3.0"
   }
 }
